--- a/dao-api/pom.xml
+++ b/dao-api/pom.xml
@@ -3,24 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
-
     <parent>
-        <groupId>com.epam.brest</groupId>
         <artifactId>cd</artifactId>
+        <groupId>com.epam.brest</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <artifactId>dao-api</artifactId>
 
-    <artifactId>dao</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.epam.brest</groupId>
-            <artifactId>dao-api</artifactId>
+            <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
         </dependency>
-     </dependencies>
+    </dependencies>
 
 </project>
